follow-up: remove non-canonical req param 'lang'
